Fix final2 SonarCloud code smells